crates/ir/tests/ir/snapshots/main__ir__lower__closures__closure_capture.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module closures__closure_capture

import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/traversable/sequence as sequence(o[p[r]]) -> p[o[r]]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
declare println: (g) -> Unit

fn main() -> Unit =
  let v0: Int = 10
  let v1: (Int) -> Int = make_closure(lambda$31, [v0])
  let v6: Int = call_closure v1(5)
  let v5: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v7: Unit = call println(v5, v6)
  v7

fn lambda$31(v2: Int, v3: Int) -> Int =
  let v4: Int = add_int(v3, v2)
  v4
