crates/ir/tests/ir/snapshots/main__ir__lower__closures__lazy_own_demanding_use.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module closures__lazy_own_demanding_use

import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/traversable/sequence as sequence(o[p[r]]) -> p[o[r]]
import core/io/println as println(g) -> Unit
fn consume(v0: ~Option[Int]) -> Option[Int] =
  switch v0 {
    0 (v1: Int) ->
      let v2: Option[Int] = construct Option::Some#0(v1)
      v2
    1 ->
      let v3: Option[Int] = construct Option::None#1()
      v3
  }

fn test() -> Option[Int] =
  let v4: ~Option[Int] = construct Option::Some#0(0)
  let v5: ~() -> Option[Int] = make_closure(lambda$32, [v4])
  let v8: Option[Int] = call_closure v5()
  v8

fn lambda$32(v6: ~Option[Int]) -> Option[Int] =
  let v7: Option[Int] = call consume(v6)
  v7
