crates/ir/tests/ir/snapshots/main__ir__lower__closures__lazy_own_explicit_own.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module closures__lazy_own_explicit_own

import core/peek/peek as peek(e) -> e
import core/list/last as last(List[q3]) -> Option[q3]
import core/list/sort_by as sort_by(List[v5], (v5) -> k5) -> List[v5]
import core/list/filter as filter(List[g1], (g1) -> Bool) -> List[g1]
import core/list/fold as fold(List[t1], v1, (v1, t1) -> v1) -> v1
import core/list/map as map(List[v], (v) -> x) -> List[x]
import core/vec/to_list as to_list(Vec[y7]) -> List[y7]
import core/io/println as println(h) -> Unit
import core/option/Some as Some(c) -> Option[c]
import core/result/Ok as Ok(e) -> Result[d, e]
import core/result/Err as Err(d) -> Result[d, e]
import core/list/Cons as Cons(f, List[f]) -> List[f]
fn use_twice(v0: (Int) -> Int) -> Int =
  let v1: Int = call_closure v0(1)
  let v2: Int = call_closure v0(2)
  let v3: Int = add_int(v1, v2)
  v3

fn shared_read(v4: ~Option[Int]) -> Int =
  switch v4 {
    0 (v5: Int) ->
      v5
    1 ->
      0
  }

fn consume(v6: ~Option[Int]) -> Int =
  switch v6 {
    0 (v7: Int) ->
      v7
    1 ->
      0
  }

fn test() -> Int =
  let v8: ~Option[Int] = construct Option::Some#0(2)
  let v9: (Int) -> Int = make_closure(lambda$27, [v8])
  let v14: Int = call use_twice(v9)
  let v15: Int = call consume(v8)
  let v16: Int = add_int(v14, v15)
  v16

fn lambda$27(v10: ~Option[Int], v11: Int) -> Int =
  let v12: Int = call shared_read(v10)
  let v13: Int = add_int(v11, v12)
  v13
