crates/ir/tests/ir/snapshots/main__ir__lower__closures__lazy_own_shared_use.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module closures__lazy_own_shared_use

import core/peek/peek as peek(d) -> d
import core/list/last as last(List[f3]) -> Option[f3]
import core/list/sort_by as sort_by(List[k5], (k5) -> z4) -> List[k5]
import core/list/filter as filter(List[g1], (g1) -> Bool) -> List[g1]
import core/list/fold as fold(List[t1], u1, (u1, t1) -> u1) -> u1
import core/list/map as map(List[v], (v) -> x) -> List[x]
import core/vec/to_list as to_list(Vec[q10]) -> List[q10]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
fn use_twice(v0: (Int) -> Int) -> Int =
  let v1: Int = call_closure v0(1)
  let v2: Int = call_closure v0(2)
  let v3: Int = add_int(v1, v2)
  v3

fn test() -> Int =
  let v4: Int = 2
  let v5: (Int) -> Int = make_closure(lambda$27, [v4])
  let v9: Int = call use_twice(v5)
  v9

fn lambda$27(v6: Int, v7: Int) -> Int =
  let v8: Int = add_int(v7, v6)
  v8
