crates/ir/tests/ir/snapshots/main__ir__lower__closures__own_closure_capture.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module closures__own_closure_capture

import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/traversable/sequence as sequence(o[p[r]]) -> p[o[r]]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
fn consume(v0: ~String) -> String =
  ""

fn make(v1: ~String) -> String =
  let v2: ~() -> String = make_closure(lambda$32, [v1])
  let v5: String = call_closure v2()
  v5

fn lambda$32(v3: ~String) -> String =
  let v4: String = call consume(v3)
  v4
